crates/unsoundness_checker/tests/snapshots/rules/typing_overload_used/markdown_test__snippet_01.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:4:5
  |
3 | @overload
4 | def foo(x: int) -> str: ...
  |     ^^^
5 |
6 | @overload
  |
info: rule `typing-overload-used` was selected in the configuration file

error[typing-overload-used]: Using `typing.overload` can lead to runtime errors.
 --> main.py:7:5
  |
6 | @overload
7 | def foo(x: str) -> int: ...
  |     ^^^
8 |
9 | def foo(x: int | str) -> str | int:
  |
info: rule `typing-overload-used` was selected in the configuration file
